--- a/async js/other stuff/promise.html
+++ b/async js/other stuff/promise.html
@@ -2,9 +2,12 @@
 
 <html>
     <head>
-
+        <title>Making Promises</title>
     </head>
     <body>
-        
+        <script>
+            function printSkrift()
+        </script>
+        <button id="hejKnap" onclick="">Tryk på mig!</button>
     </body>
 </html>
