--- a/spy-cite/node/resources/cite.html
+++ b/spy-cite/node/resources/cite.html
@@ -22,5 +22,6 @@
             <input type="text" name="lname"><br>
             <input type="submit" value="submit">
         </form>
+        <script></script>
     </body>
 </html>
