--- a/async js/spy-cite/node/resources/cite.html
+++ b/async js/spy-cite/node/resources/cite.html
@@ -22,6 +22,6 @@
             <input type="text" name="lname"><br>
             <input type="submit" value="submit">
         </form>
-        <script></script>
+        <script>src='front.js'</script>
     </body>
 </html>
